[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameSrc/Universal/GUI/Selling/insert.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/ThemeSpanishViolet.tres" type="Theme" id=2]
[ext_resource path="res://Assets/CustomeStyle/RTL/Rest_Frame_Title.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Themes/ThemeVegasGold.tres" type="Theme" id=4]
[ext_resource path="res://Assets/DynamicFonts/new_dynamicfontdata.tres" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/DynamicFonts/Text_Default.tres" type="DynamicFont" id=8]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Selling" type="Control"]
margin_left = 208.0
margin_top = -560.0
margin_right = 208.0
margin_bottom = -560.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Window" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame2" type="Panel" parent="Window"]
margin_left = 848.0
margin_top = 712.0
margin_right = 1048.0
margin_bottom = 813.0

[node name="Frame" type="Panel" parent="Window"]
margin_left = 768.0
margin_top = 776.0
margin_right = 1048.0
margin_bottom = 1008.0

[node name="Title" type="RichTextLabel" parent="Window"]
margin_left = 848.0
margin_top = 720.0
margin_right = 1040.0
margin_bottom = 776.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Selling"
text = "Selling"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Control" parent="."]
margin_top = -32.0
margin_right = 40.0
margin_bottom = 8.0

[node name="Type" type="Control" parent="Info"]
margin_top = 40.0
margin_right = 40.0
margin_bottom = 80.0

[node name="Key" type="RichTextLabel" parent="Info/Type"]
margin_left = 776.0
margin_top = 784.0
margin_right = 880.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Type"
text = "Type"

[node name="Value" type="RichTextLabel" parent="Info/Type"]
margin_left = 880.0
margin_top = 784.0
margin_right = 1008.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="Price" type="RichTextLabel" parent="Info/Type"]
margin_left = 1008.0
margin_top = 784.0
margin_right = 1064.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="SubType" type="Control" parent="Info"]
margin_top = 72.0
margin_right = 40.0
margin_bottom = 112.0

[node name="Key" type="RichTextLabel" parent="Info/SubType"]
margin_left = 776.0
margin_top = 784.0
margin_right = 880.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "SubType"
text = "SubType"

[node name="Value" type="RichTextLabel" parent="Info/SubType"]
margin_left = 880.0
margin_top = 784.0
margin_right = 1008.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="Price" type="RichTextLabel" parent="Info/SubType"]
margin_left = 1008.0
margin_top = 784.0
margin_right = 1064.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="Rarity" type="Control" parent="Info"]
margin_top = 104.0
margin_right = 40.0
margin_bottom = 144.0

[node name="Key" type="RichTextLabel" parent="Info/Rarity"]
margin_left = 776.0
margin_top = 784.0
margin_right = 880.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Rarity"
text = "Rarity"

[node name="Value" type="RichTextLabel" parent="Info/Rarity"]
margin_left = 880.0
margin_top = 784.0
margin_right = 1008.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="Price" type="RichTextLabel" parent="Info/Rarity"]
margin_left = 1008.0
margin_top = 784.0
margin_right = 1064.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="Stocks" type="Control" parent="Info"]
margin_top = 136.0
margin_right = 40.0
margin_bottom = 176.0

[node name="Key" type="RichTextLabel" parent="Info/Stocks"]
margin_left = 776.0
margin_top = 784.0
margin_right = 880.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "Stocks"
text = "Stocks"

[node name="Value" type="RichTextLabel" parent="Info/Stocks"]
margin_left = 880.0
margin_top = 784.0
margin_right = 1008.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="Price" type="RichTextLabel" parent="Info/Stocks"]
margin_left = 1008.0
margin_top = 784.0
margin_right = 1064.0
margin_bottom = 808.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Total" type="Control" parent="Control"]
margin_left = 232.0
margin_top = 40.0
margin_right = 272.0
margin_bottom = 80.0

[node name="Key" type="RichTextLabel" parent="Control/Total"]
margin_left = 552.0
margin_top = 880.0
margin_right = 872.0
margin_bottom = 904.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "--------------------------"
text = "--------------------------"

[node name="Value" type="RichTextLabel" parent="Control/Total"]
margin_left = 768.0
margin_top = 912.0
margin_right = 848.0
margin_bottom = 952.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="Confirm" type="Button" parent="Control"]
margin_left = 904.0
margin_top = 952.0
margin_right = 976.0
margin_bottom = 984.0
theme = ExtResource( 4 )
text = "SELL"

[node name="Cancel" type="Button" parent="Control"]
margin_left = 792.0
margin_top = 952.0
margin_right = 864.0
margin_bottom = 984.0
theme = ExtResource( 4 )
text = "CANCEL"

[connection signal="pressed" from="Control/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Control/Cancel" to="." method="_on_Cancel_pressed"]
